fixed munging doc

--- a/Data Munging.ipynb
+++ b/Data Munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35bea2df",
+   "id": "e4f96164",
    "metadata": {},
    "source": [
     "### Seamless Bay Area Tweet Analysis: Part 1, Data Wrangling\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48f43526",
+   "id": "5002dbb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d27ebc31",
+   "id": "4cbd55f4",
    "metadata": {},
    "source": [
     "I manually downloaded the data from twitter, in the form of 48 seperate CSV's (one for each month covered) and put them in a single folder. First, let's get a list of all the files."
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fe6ba849",
+   "id": "b1897af3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30d7429",
+   "id": "344be3be",
    "metadata": {},
    "source": [
     "After removing hidden files, we loop through all the filenames and append them into a single dataframe. There are only ~2200 tweets, so a more memory efficient data structure isn't necessary."
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7e08cc71",
+   "id": "d4188e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0feca12b",
+   "id": "c15e4ab7",
    "metadata": {},
    "source": [
     "Let's take a look at the data to see what we've got."
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4eec7cf8",
+   "id": "3026d7c8",
    "metadata": {
     "scrolled": true
    },
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e06a0f4f",
+   "id": "ab6bd48e",
    "metadata": {},
    "source": [
     "Looks like we expected it to, but some of those columns look like they might be empty. Let's check them."
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e26a00d1",
+   "id": "b1bbbb1e",
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8994cbde",
+   "id": "8864b136",
    "metadata": {},
    "source": [
     "We loop through every column and check that each value is equal to the string \"-\"."
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b894a33c",
+   "id": "8f44f905",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9542fe23",
+   "id": "cbb6695d",
    "metadata": {},
    "source": [
     "Perfect, it looks like all those columns are empty and we can safetly drop them. We're also going to drop the first two columns because Tweet ID and Permalink are just identifiers we won't be using."
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1bb0d39d",
+   "id": "c5eb0d88",
    "metadata": {
     "scrolled": true
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a88d1ab",
+   "id": "bfc97785",
    "metadata": {},
    "source": [
     "Great, that looks a lot better. We also might want to make sure that the time column is a datetime object and not a string."
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f55d7f",
+   "id": "6f473b4d",
    "metadata": {},
    "source": [
     "Darn, looks like it's a string. We should convert it to datetime instead which is a lot easier to work with."
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "97eee124",
+   "id": "9a10ea25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "95477b93",
+   "id": "dbb9952c",
    "metadata": {},
    "outputs": [
     {
@@ -628,159 +628,108 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6041836",
+   "id": "61cc9719",
    "metadata": {},
    "source": [
-    "Looks good. Let's do one final check."
+    "Looks good. Let's move on to the most complex column, the text of the tweets themselves. Just as as example take a look at the first tweet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "e0aa1726",
+   "execution_count": 59,
+   "id": "f77d08cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tweet text</th>\n",
-       "      <th>time</th>\n",
-       "      <th>impressions</th>\n",
-       "      <th>engagements</th>\n",
-       "      <th>engagement rate</th>\n",
-       "      <th>retweets</th>\n",
-       "      <th>replies</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>user profile clicks</th>\n",
-       "      <th>url clicks</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>@MTCBATA is looking for a new Executive Direct...</td>\n",
-       "      <td>2018-10-27 18:01:00</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.040323</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ultimate seamlessness. https://t.co/CdCLrg2o6a</td>\n",
-       "      <td>2018-10-26 14:24:00</td>\n",
-       "      <td>345.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.028986</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Help Nix Prop 6! Save funding for more seamles...</td>\n",
-       "      <td>2018-10-26 02:28:00</td>\n",
-       "      <td>994.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0.019115</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>It doesn't have to be this way! Let's get to f...</td>\n",
-       "      <td>2018-10-23 23:29:00</td>\n",
-       "      <td>792.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.008838</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>And then come say hi at next month’s @SPUR_Urb...</td>\n",
-       "      <td>2018-10-23 23:09:00</td>\n",
-       "      <td>532.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.005639</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                          Tweet text                time  \\\n",
-       "0  @MTCBATA is looking for a new Executive Direct... 2018-10-27 18:01:00   \n",
-       "1     Ultimate seamlessness. https://t.co/CdCLrg2o6a 2018-10-26 14:24:00   \n",
-       "2  Help Nix Prop 6! Save funding for more seamles... 2018-10-26 02:28:00   \n",
-       "3  It doesn't have to be this way! Let's get to f... 2018-10-23 23:29:00   \n",
-       "4  And then come say hi at next month’s @SPUR_Urb... 2018-10-23 23:09:00   \n",
-       "\n",
-       "   impressions  engagements  engagement rate  retweets  replies  likes  \\\n",
-       "0        124.0          5.0         0.040323       0.0      0.0    0.0   \n",
-       "1        345.0         10.0         0.028986       0.0      0.0    1.0   \n",
-       "2        994.0         19.0         0.019115       4.0      0.0    5.0   \n",
-       "3        792.0          7.0         0.008838       2.0      0.0    4.0   \n",
-       "4        532.0          3.0         0.005639       0.0      0.0    1.0   \n",
-       "\n",
-       "   user profile clicks  url clicks  \n",
-       "0                  1.0         4.0  \n",
-       "1                  0.0         9.0  \n",
-       "2                  3.0         5.0  \n",
-       "3                  1.0         0.0  \n",
-       "4                  2.0         0.0  "
+       "\"@MTCBATA is looking for a new Executive Director. The last one was in place for 17 years, so this is a BIG deal. We've put together a list of positive, visionary leaders we think are great candidates for the job. Would you add anyone else? Let us know! https://t.co/Syf9exwPTd\""
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df['Tweet text'].iloc[0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "229f7a31",
+   "id": "e57c76b7",
    "metadata": {},
    "source": [
-    "Great. We now move on to the next notebook, which covers EDA."
+    "Yikes, that's going to need a lot of cleaning to be usable. A lot more will be done in the pre-processing step, but for now let's just do the basics. Splitting the tweets into individual words, and removing special characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "36f0d40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# break the tweets up into individual words\n",
+    "tweet_words = []\n",
+    "for x in range(len(df)):\n",
+    "    b = df['Tweet text'].iloc[x].lower()\n",
+    "    c = re.split('\\s', b)\n",
+    "    words = list(filter(lambda x: len(re.findall('[a-zA-Z]', x)) != 0, c))\n",
+    "    tweet_words.append(words)\n",
+    "\n",
+    "df['tweet words'] = tweet_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "4cf3f7aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     [@mtcbata, is, looking, for, a, new, executive...\n",
+       "1     [ultimate, seamlessness., https://t.co/cdclrg2...\n",
+       "2     [help, nix, prop, save, funding, for, more, se...\n",
+       "3     [it, doesn't, have, to, be, this, way!, let's,...\n",
+       "4     [and, then, come, say, hi, at, next, month’s, ...\n",
+       "                            ...                        \n",
+       "35    [today, is, #transitequityday,, chosen, in, ho...\n",
+       "36    [@alevin, @anniefryman, @scott_wiener, @gillib...\n",
+       "37    [☺️all, the, transit, love, https://t.co/vvzzu...\n",
+       "38    [@ratnaamin, re:seamless, transit, report:, \"m...\n",
+       "39    [congrats, @ratnaamin, on, your, new, adventur...\n",
+       "Name: tweet words, Length: 2249, dtype: object"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# double check that it worked\n",
+    "df['tweet words']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "989f208b",
+   "metadata": {},
+   "source": [
+    "Great. Let's export this cleaned data and move onto the next notebook, which covers EDA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "9f0e5186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/cleaned tweets.csv')"
    ]
   }
  ],
