--- a/Data Munging.ipynb
+++ b/Data Munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e68ba18a",
+   "id": "81993463",
    "metadata": {},
    "source": [
     "### Seamless Bay Area Tweet Analysis: Part 1, Data Wrangling\n",
@@ -15,24 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f1197c97",
+   "execution_count": 117,
+   "id": "4f2bc8be",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import statistics as stat\n",
     "import re\n",
-    "from sklearn import linear_model\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "import os"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0838a72",
+   "id": "2eb572e2",
    "metadata": {},
    "source": [
     "I manually downloaded the data from twitter, in the form of 48 seperate CSV's (one for each month covered) and put them in a single folder. First, let's get a list of all the files."
@@ -40,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "75f57b11",
+   "execution_count": 118,
+   "id": "54f2a4bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd50ce37",
+   "id": "8d41705c",
    "metadata": {},
    "source": [
     "After removing hidden files, we loop through all the filenames and append them into a single dataframe. There are only ~2200 tweets, so a more memory efficient data structure isn't necessary."
@@ -58,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "ebdad541",
+   "execution_count": 119,
+   "id": "1de0a32c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a70cb4",
+   "id": "7b0ef3a6",
    "metadata": {},
    "source": [
     "Let's take a look at the data to see what we've got."
@@ -87,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ca065756",
+   "execution_count": 120,
+   "id": "b39f23c9",
    "metadata": {
     "scrolled": true
    },
@@ -316,7 +313,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae86d1f",
+   "id": "9542f1aa",
    "metadata": {},
    "source": [
     "Looks like we expected it to, but some of those columns look like they might be empty. Let's check them."
@@ -335,8 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "bebbe1dd",
+   "execution_count": 121,
+   "id": "b92b1e02",
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +357,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b562e45",
+   "id": "f1df9957",
    "metadata": {},
    "source": [
     "We loop through every column and check that each value is equal to the string \"-\"."
@@ -379,8 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "c7cd4552",
+   "execution_count": 122,
+   "id": "0c77abf2",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +386,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5124b7a",
+   "id": "584ca370",
    "metadata": {},
    "source": [
     "Perfect, it looks like all those columns are empty and we can safetly drop them. We're also going to drop the first two columns because Tweet ID and Permalink are just identifiers we won't be using."
@@ -418,8 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "09b82bfd",
+   "execution_count": 123,
+   "id": "f6ed4875",
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +547,7 @@
        "4                  2.0         0.0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b029fa",
+   "id": "6e902c0d",
    "metadata": {},
    "source": [
     "Great, that looks a lot better. We also might want to make sure that the time column is a datetime object and not a string."
@@ -572,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7296e21",
+   "id": "4f530961",
    "metadata": {},
    "source": [
     "Darn, looks like it's a string. We should convert it to datetime instead which is a lot easier to work with."
@@ -580,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "25cb68d3",
+   "execution_count": 124,
+   "id": "f5518ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,8 +593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "2470cfbe",
+   "execution_count": 133,
+   "id": "5cfaa867",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +614,7 @@
        "Name: time, Length: 2249, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c25e431",
+   "id": "9a0d6602",
    "metadata": {},
    "source": [
     "Looks good. Let's move on to the most complex column, the text of the tweets themselves. Just as as example take a look at the first tweet."
@@ -636,8 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "4c383bdb",
+   "execution_count": 126,
+   "id": "ee6ab031",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +643,7 @@
        "\"@MTCBATA is looking for a new Executive Director. The last one was in place for 17 years, so this is a BIG deal. We've put together a list of positive, visionary leaders we think are great candidates for the job. Would you add anyone else? Let us know! https://t.co/Syf9exwPTd\""
       ]
      },
-     "execution_count": 59,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be810497",
+   "id": "aecb3477",
    "metadata": {},
    "source": [
     "Yikes, that's going to need a lot of cleaning to be usable. A lot more will be done in the pre-processing step, but for now let's just do the basics. Splitting the tweets into individual words, and removing special characters."
@@ -665,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "ab74f360",
+   "execution_count": 127,
+   "id": "ebc967a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "f59db6ed",
+   "execution_count": 128,
+   "id": "a32e9821",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +701,7 @@
        "Name: tweet words, Length: 2249, dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7271df41",
+   "id": "7ffdfbe9",
    "metadata": {},
    "source": [
     "Great. Let's export this cleaned data and move onto the next notebook, which covers EDA."
@@ -724,13 +721,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "6ea4610e",
+   "execution_count": 134,
+   "id": "81d6cd8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/cleaned tweets.csv')"
+    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/cleaned tweets.csv', date_format='%Y-%m-%d %H:%M:%S')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83784d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
