--- a/Seamless Twitter Analysis.ipynb
+++ b/Seamless Twitter Analysis.ipynb
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4b819758",
+   "id": "7fc35c41",
    "metadata": {},
    "outputs": [
     {
@@ -236,44 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "1d41d288",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3152.2579209558107"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stat.stdev(df['impressions'])"
+    "stat.stdev(df['engagements'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "9c871651",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1416.329035126723"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.mean(df['impressions'])"
+    "np.mean(df['engagements'])"
    ]
   },
   {
@@ -364,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ddbf86",
+   "id": "08ed7ce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "206c9f9f",
+   "id": "b86ab81b",
    "metadata": {},
    "outputs": [
     {
@@ -551,21 +529,15 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "aac18567",
+   "id": "78182375",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "temp = []\n",
-    "for x in range(len(df['time'])):\n",
-    "    temp.append(datetime.strptime(str(df['time'].iloc[x][0:-6] + ':00'), '%Y-%m-%d %H:%M:%S'))\n",
-    "df['time'] = temp"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "6abae753",
+   "id": "df7aa516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "64db16d7",
+   "id": "4577b7d6",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e5a91965",
+   "id": "2ab5fa11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "8338847b",
+   "id": "4220d19e",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "421205b8",
+   "id": "3d1cf44c",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ceeea650",
+   "id": "897e19db",
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5789a27a",
+   "id": "eb3bd126",
    "metadata": {},
    "outputs": [
     {
