--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -282,25 +282,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "714c65b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['retweets', 'replies', 'likes', 'user profile clicks', 'url clicks'], dtype='object')"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 96,
    "id": "91a2f4c9",
    "metadata": {},
@@ -1104,7 +1085,221 @@
    "id": "7bf829dc",
    "metadata": {},
    "source": [
-    "Finally! We have something interesting. The top 20 tweets all have several things in common just from a visual inspection. Nearly all feature original videos, pictures, and especially maps (the top 3 all have maps). Several have some kind of calls to action (polls, upcoming bills, or crowdfunding)."
+    "Finally! We have something interesting. The top 20 tweets all have several things in common just from a visual inspection. Nearly all feature original videos, pictures, and especially maps (the top 3 all have maps). Several have some kind of calls to action (polls, upcoming bills, or crowdfunding). We can definitely explore this in the next notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dffebba",
+   "metadata": {},
+   "source": [
+    "I'm curious as to whether some features of engagement might be varying more significantly than other. To find out, I normalized each of the columns via maximum absolute scaling so that each value is between -1 and 1 to make direct comparison more legible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "cbc2acd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07695686008030066"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.stdev(hi_value['retweets'] /hi_value['retweets'].abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "94193d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08795445125564791"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.stdev(hi_value['likes'] /hi_value['likes'].abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "a2985bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10573012605634688"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.stdev(hi_value['replies'] /hi_value['replies'].abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "04b9f5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07216321519924375"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.stdev(hi_value['user profile clicks'] /hi_value['user profile clicks'].abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "b128d18b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06923034964668809"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.stdev(hi_value['url clicks'] /hi_value['url clicks'].abs().max())"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "6f0c99d9",
+   "metadata": {},
+   "source": [
+    "Darn, the standard deviations are pretty close to each other, not much to take away from that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "7210d065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today, Seamless Bay Area is unveiling a map of our Integrated Transit Fare Vision — a fully unified system of transit fares that would enable riders to travel seamlessly across the nine-county Bay Area with a single transit fare and free transfers 🗺️ https://t.co/P94GGBfgVV https://t.co/J1Yh89BzE4\n",
+      "We created a map of the Bay Area's existing transit agencies' service areas, each of which have separate fares, schedules, route planning, and branding.\n",
+      "\n",
+      "We think the problem speaks for itself. https://t.co/pOVU6i95cU\n",
+      "Clearly, our existing Bay Area transit system doesn't work, and riders deserve better. \n",
+      "\n",
+      "So what would a seamless, unified system look like? We just published our @seamlessbayarea Vision Map in partnership w/ @interline_io to illustrate just that.\n",
+      "\n",
+      "https://t.co/LaszH9qvDk https://t.co/0OB8Ds2lNc\n",
+      "It takes 11 minutes to walk between the new Larkspur @smarttrain station and the @GoldenGateFerry. The fastest way, shown here, involves cutting through a parking lot and crossing 4 streets.  \n",
+      "\n",
+      "What a huge missed opportunity for an excellent, seamless regional transit connection. https://t.co/G1f4HWktfL\n",
+      "To be clear about what we do and don't advocate for:\n",
+      "We support:\n",
+      "- An equitable simple fare system structured to expand affordable access to riders across the region\n",
+      "- New substantial long term funding for transit operations to increase service levels + fund fare integration 1/x\n",
+      "Many Bay Area residents are understandably confused and upset after the SF Board of Supervisors yesterday declined to advance a ballot measure that could have provided stable funding for Caltrain and helped to avoid a prolonged shutdown.\n",
+      "Hello transit nerds! Let's write some poetry. Write a short Bay Area transit inspired poem and tag @seamlessbayarea. The author of the fav poem, based on # of ♥️s, will win a limited edition Seamless @transitsupply t-shirt! 📜👕🚉\n",
+      "\n",
+      "Tweet yours by Monday night, 12/16! https://t.co/vHFFSMdCx1\n",
+      "ACTION ALERT: The SF Board of Supervisors is about to debate whether to enable the @Caltrain ballot measure - or let it die today. If that happens, Caltrain risks shutdown. Join Seamless today in urging the @sfbos to move forward w/ the Caltrain ballot measure (1/2)\n",
+      "Apparently more frequent service (104); cleaner buses + trains (62), running transit as one seamless system (50), &amp; better regional connections (47) would get more people using transit. So why don’t we govern or operate Bay Area transit to achieve 3/4 these outcomes? https://t.co/MQ4cLUmKv9\n",
+      "At today's #BRTRTF Meeting transit agencies shared a combined Bay Area transit network map showing the region's current frequent service, overlaid on a base map showing low income households, to help identify gaps and help plan for better integration👏. \n",
+      "\n",
+      "Write comments below👇 https://t.co/BJSxZdmLJw\n",
+      "The region's Fare Integration Task Force (transit general managers and MTC Executive Director) just voted unanimously to support the Fare Policy Vision, including advancing a pilot all-agency transit pass for organizations starting in 2022, and free transfers starting in 2023.\n",
+      "We're witnessing some strange happenings in the Bay Area - any guesses on what might be coming? https://t.co/JewR9e0vDI\n",
+      "Let’s namestorm - we’d love suggestions for the title of our upcoming board game! The game allows 2-5 players to compete, to see who can connect the most homes, workplaces and activities as possible via transit. Share your name ideas - the good, the bad, and the hilarious! https://t.co/tByl6JUAuv\n",
+      "Under our Integrated Fare Vision proposal, riders would be charged the same amount *no matter what mode of transit they use or how many times they transfer*, providing more predictability for riders while encouraging people to use the fastest route available. https://t.co/CynNkh04GP\n",
+      "34 hours left on our fundraiser, and we're just ~$500 away from raising $10,000 on our crowdfunding page!! \n",
+      "\n",
+      "Tell friends, neighbors, the person sitting next to you on @SFBART. Because Bay Area transit agencies are #bettertogether\n",
+      "\n",
+      "https://t.co/PAdRM3Axms https://t.co/2lcKHGV9PL\n",
+      "📊 NEW: MTC poll of Bay Area residents conducted in April found *89%* support for a fully integrated, multimodal transit system w/ regional fares &amp; consistent mapping &amp; signage. In short, seamlessness is overwhelmingly popular ⤵️\n",
+      "\n",
+      "Full results here: https://t.co/K2w2osqGFZ https://t.co/XiMFYk9X7u\n",
+      "We believe that a a thoughtful merger of BART and Caltrain is in the best interest of Bay Area transit riders and our region as a whole.\n",
+      "\n",
+      "In a new post on our blog, policy director Ian Griffiths explains why ⤵️ https://t.co/BpgAeC6mgF\n",
+      "The Bay Area's 27 transit agencies, in emojis:\n",
+      "🗓️🚂\n",
+      "♠️\n",
+      "🌊🌬️ea🎁🆔\n",
+      "⬅️🐈\n",
+      "⏩\n",
+      "🎡🧑‍🦽🤸‍♀️☸️\n",
+      "🐄v🤒🌆🚌\n",
+      "🧠\n",
+      "🐴📥🚍\n",
+      "a👀🚍\n",
+      "🔺🔺🔺\n",
+      "🌛e\n",
+      "🌿\n",
+      "🐕a🚽🤱🚍\n",
+      "🔢e 🔌\n",
+      "🇧🇷🌄🔺🍃\n",
+      "sam🏳️‍⚧️\n",
+      "🇪🇺🌆🚍\n",
+      "⌛️🥘📥s🚂\n",
+      "✌️👕A\n",
+      "🥇⛩️🚍\n",
+      "🎅🌹a🌆🚌\n",
+      "🧒🕉️a🔢e🚍\n",
+      "🧢it👴🛣️\n",
+      "👟🏳️‍⚧️\n",
+      "sf🌊🧚‍♀️\n",
+      "🎲x🔛🟥e🎢\n",
+      "Can you name them all?\n",
+      "The map divides the Bay Area into a series of 7-mile wide zones, each about the size of San Francisco. Fares are easy to calculate; riders simply count the minimum number of zones required to go between two points on the map, then look up the corresponding fare in the table. https://t.co/BYL0q8in8h\n",
+      "📢🎲 BIG NEWS 📢🎲\n",
+      "\n",
+      "Seamless Bay Area has partnered with @alfred_twu to design the region's first seamless transit board game - Connect the Bay! \n",
+      "\n",
+      "We need YOUR support to bring this amazing game to life. Back our Connect the Bay Kickstarter today ⤵️ https://t.co/Vs4m44q19d https://t.co/8yNXCVvyCf\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in hi_value_eng['Tweet text'][0:20]:\n",
+    "    print(x)"
    ]
   },
   {
@@ -1139,7 +1334,9 @@
    "cell_type": "code",
    "execution_count": 88,
    "id": "5a977e6e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1566,9 +1763,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64929b03",
+   "metadata": {},
+   "source": [
+    "In the next step of the project, pre-processing, I'm going to perform some more feature engineering and extract, at the very least, links, @replies, hashtags, and sentiment score from the tweets to prepare for modeling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d35f129",
+   "id": "759533f4",
    "metadata": {},
    "outputs": [],
    "source": []
