--- a/Seamless Twitter Analysis.ipynb
+++ b/Seamless Twitter Analysis.ipynb
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7fc35c41",
+   "id": "e4d5ea3c",
    "metadata": {},
    "outputs": [
     {
@@ -236,20 +236,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "1d41d288",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "202.7709727690056"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stat.stdev(df['engagements'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "9c871651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.76567363272566"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(df['engagements'])"
    ]
@@ -342,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ed7ce7",
+   "id": "453c0ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b86ab81b",
+   "id": "a4c5fc53",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "78182375",
+   "id": "7dc70db3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "df7aa516",
+   "id": "05fdf415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "4577b7d6",
+   "id": "2bee27c3",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2ab5fa11",
+   "id": "bbe67b47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "4220d19e",
+   "id": "e5532cf3",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3d1cf44c",
+   "id": "7e19e73f",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "897e19db",
+   "id": "9dfa52e8",
    "metadata": {},
    "outputs": [
     {
@@ -1740,8 +1762,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb3bd126",
+   "execution_count": 117,
+   "id": "e2a79ba5",
    "metadata": {},
    "outputs": [
     {
@@ -1750,6 +1772,16 @@
      "text": [
       "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1758,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "e4342bb3",
    "metadata": {},
    "outputs": [],
