--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -980,23 +980,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 237,
-   "id": "791ff2b5",
+   "cell_type": "markdown",
+   "id": "dae4a932",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.024589337340945483"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "Oof, well if an r^2 of 0.0246 is the best we can get that probably isn't a productive line "
+   ]
   },
   {
    "cell_type": "code",
@@ -1171,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c2207f",
+   "id": "8cac3cf7",
    "metadata": {},
    "source": [
     "First we find the number of positive words in each tweet."
@@ -1214,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07fc3b28",
+   "id": "1d20f318",
    "metadata": {},
    "source": [
     "Then we find the number of positive words in each tweet."
@@ -1257,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e6d42ca",
+   "id": "62c44570",
    "metadata": {},
    "source": [
     "Sentiment score is calculated by subtracting the number of negative words in the tweet from the number of positive words and dividing it by the total number of words to find a ratio of positive:negative."
@@ -1286,12 +1275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da7a54ba",
+   "execution_count": 355,
+   "id": "85bb54e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/tw features.csv', date_format='%Y-%m-%d %H:%M:%S')"
+    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/tweets with features.csv', date_format='%Y-%m-%d %H:%M:%S')\n",
+    "df1.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/sentiment scores.csv')"
    ]
   }
  ],
