--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1216,6 +1216,16 @@
    "source": [
     "While not as informative as I'd hoped, since so many values are close to 0 and only a relatively small number of tweets had enough traction to provide usable data. In the next step of the project, pre-processing, I'm going to perform some more feature engineering and extract, at the very least, links, @replies, hashtags, and sentiment score from the tweets to prepare for modeling."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "164736dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/grahamsmith/Documents/SpringboardWork/Seamless_Twitter_Analysis/cleaned tweets.csv', date_format='%Y-%m-%d %H:%M:%S')"
+   ]
   }
  ],
  "metadata": {
